--- a/atv_JS/2_Aposentadoria/index.html
+++ b/atv_JS/2_Aposentadoria/index.html
@@ -41,7 +41,7 @@
 
         <p id="resultado"></p>
         <br><br>
-        <a href="file:///C:/Users/IFSP/Desktop/atv_JS/index.html">Voltar a Pagina Principal</a>
+    <a href="../index.html">Voltar a Pagina Principal</a>
 </body>
 
 </html>
